# rust-activitypub-play

./: .env-example  .gitignore  Cargo.toml  README.md  log.txt  run.sh
src/: activities.rs  actors.rs  app.rs  config.rs  constants.rs  http_signatures.rs  lib.rs  main.rs  models.rs  objects.rs  webfinger.rs  webfinger_resolver.rs
static/: index.html
