[package]
name = "rust-activitypub-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }
webfinger = "0.5.1"
url = "2.3.1"
lazy_static = "1.4.0"
activitystreams = "0.7.0-alpha.20"
activitystreams-ext = "0.1.0-alpha.2"
