[package]
name = "rust-activitypub-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
dotenv = "0.15.0"
actix-web = "4.2.1"
actix-files = "0.6.2"
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }
lazy_static = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
pem-rfc7468 = { version = "0.6.0", features = ["alloc"] }
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.13.1"
rsa = "0.7.1"
rand = "0.8.5"
signature = "1.6.4"
reqwest = { version = "0.11", features = ["json", "gzip", "multipart"] }
clap = { version = "4.0.24", features = ["derive", "env", "cargo"] }
http = "0.2.8"

#nanoid = "0.4.0"
url = "2.3.1"
activitystreams = "0.7.0-alpha.20"
activitystreams-ext = "0.1.0-alpha.2"
anyhow = "1.0.66"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

